--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokemon-party-manager",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://fang-charles.github.io/pokemon-party-manager",
+  "homepage": "https://pokemon-party-manager.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
